--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "orijin",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ihaterynn.github.io/Orijin", 
   "dependencies": {
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-phantom": "^0.9.24",
@@ -21,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",      
+    "deploy": "gh-pages -d build"      
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"                
   }
 }
