Implemented Wallet Extension Transaction to purchase Games & Added Resell Functionality

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "orijin",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ihaterynn.github.io/Orijin", 
+  "homepage": "https://ihaterynn.github.io/Orijin",
   "dependencies": {
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-phantom": "^0.9.24",
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "buffer": "^6.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
@@ -23,8 +24,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",      
-    "deploy": "gh-pages -d build"      
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +46,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"                
+    "gh-pages": "^6.1.1"
   }
 }
